--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "aos": "^2.3.4",
     "gsap": "^3.12.5",
+    "leaflet": "^1.9.4",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
