--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "leaflet": "^1.9.4",
     "next": "14.2.15",
     "react": "^18",
