--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.13.3"
   },
   "devDependencies": {
