add new compound

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
+    "@uploadcare/react-uploader": "^1.2.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "leaflet": "^1.9.4",
