--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uploadcare/react-uploader": "^1.2.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "filestack-js": "^3.35.4",
     "leaflet": "^1.9.4",
     "next": "^14.2.15",
     "next-cloudinary": "^6.16.0",
